--- a/charts/templates/deployment.yaml
+++ b/charts/templates/deployment.yaml
@@ -19,30 +19,11 @@ spec:
     metadata:
       labels:
         app.kubernetes.io/name: {{ include "sftp-server.name" . }}
-        app.kubernetes.io/instance: {{ .Release.Name }}
-        {{- if .Values.vxlanController.enabled }}
-        {{ .Values.vxlanController.metadataKey }}: "true"
-        {{- end }}
-      annotations:
-        {{- if .Values.vxlanController.enabled }}
-        {{ .Values.vxlanController.annotationKey }}: | 
-          {{ .Values.vxlanController.network }}
-            {{ if .Values.vxlanController.ip -}} ip= {{- .Values.vxlanController.ip }} {{- end}}
-            {{ if .Values.vxlanController.route -}} route= {{- .Values.vxlanController.route }} {{- end}}
-        {{- end }}
+        app.kubernetes.io/instance: {{ .Release.Name }
     spec:
       initContainers:
-      {{- if .Values.vxlanController.enabled }}
-      - name: vxlan-controller-agent-init
-        image: {{ .Values.vxlanController.image.repository }}:{{ .Values.vxlanController.image.tag }}
-        imagePullPolicy: {{ .Values.vxlanController.image.pullPolicy  | quote }}
-        resources: {{ toYaml .Values.vxlanController.resources | indent 10 }}
-        securityContext:
-          capabilities:
-            add: ["NET_ADMIN"]
-      {{- end }}
       containers:
-        - name: {{ .Chart.Name }}
+        - name: sftp-server
           image: "quay.io/openvnf/sftp:alpine-3.7"
           imagePullPolicy: IfNotPresent
           securityContext:
@@ -55,24 +36,13 @@ spec:
           volumeMounts:
             - name: sftp-config
               mountPath: /etc/sftp/
-            {{- if .Values.persistentVolume.enabled }}
             - name: data
-              mountPath: /home/ {{- .Values.sftpConfig.username -}} /
-              {{- if .Values.persistentVolume.subPath }}
-              subPath: "{{ .Values.persistentVolume.subPath }}"
-              {{- end }}
-            {{- end }}
-            {{- if .Values.sftpConfig.authorizedKeys }}
+              mountPath: /home/sftp/
             - name: authorized-keys
-              mountPath: /home/ {{- .Values.sftpConfig.username -}} /.ssh/keys/
-            {{- end }}
-            {{- if .Values.sftpConfig.hostKeys }}
-            {{- range .Values.sftpConfig.hostKeys.keys }}
-            - name: ssh-host-keys
-              mountPath: /etc/ssh/{{ . }}
-              subPath: {{ . }}
-            {{- end }}
-            {{- end }}
+              mountPath: /home/sftp/.ssh/keys/
+            # - name: ssh-host-keys
+            #   mountPath: /etc/ssh/ssh_host_rsa_key
+            #  subPath: ssh_host_rsa_key
           livenessProbe:
             tcpSocket:
               port: 22
@@ -80,61 +50,24 @@ spec:
             tcpSocket:
               port: 22
           resources:
-            {{- toYaml .Values.resources.sftp | indent 12 }}
-        {{- if .Values.debug.enabled }}
-        - name: debug
-          image: {{ .Values.debug.image.repository }}:{{ .Values.debug.image.tag }}
-          imagePullPolicy: {{ .Values.debug.image.pullPolicy | quote }}
-          resources:
-  {{ toYaml .Values.resources.debug | indent 10 }}
-          securityContext:
-            capabilities:
-              add: ["NET_ADMIN"]
-          command:
-          - sh
-          - -c
-          - "trap : TERM INT; (while true; do sleep 1000; done) & wait"
-        {{- end }}
-        {{- if .Values.vxlanController.enabled }}
-        - name: vxlan-controller-agent
-          image: {{ .Values.vxlanController.image.repository }}:{{ .Values.vxlanController.image.tag }}
-          imagePullPolicy: {{ .Values.vxlanController.image.pullPolicy | quote }}
-          resources:
-            {{- toYaml .Values.vxlanController.resources | nindent 12 }}
-          securityContext:
-            capabilities:
-              add:
-              - NET_ADMIN
-        {{- end }}
+            sftp:
+              limits:
+                cpu: 100m
+                memory: 128Mi
+              requests:
+                cpu: 100m
+                memory: 128Mi
       volumes:
       - name: sftp-config
         configMap:
           name: {{ include "sftp-server.fullname" . }}-users
-      {{- if .Values.sftpConfig.authorizedKeys }}
-      - name: authorized-keys
-        configMap:
-          name: {{ template "sftp-server.fullname" . }}-authorized-keys
-      {{- end }}
-      {{- if .Values.sftpConfig.hostKeys }}
-      - name: ssh-host-keys
-        secret:
-          secretName: {{ .Values.sftpConfig.hostKeys.secret }}
-          defaultMode: 384
-      {{- end }}
-      {{- if .Values.persistentVolume.enabled }}
+      #- name: authorized-keys
+      #  configMap:
+      #    name: {{ template "sftp-server.fullname" . }}-authorized-keys
+      #- name: ssh-host-keys
+      #  secret:
+      #    secretName: {{ .Values.sftpConfig.hostKeys.secret }}
+      #    defaultMode: 384
       - name: data
         persistentVolumeClaim:
-          claimName: {{ if .Values.persistentVolume.existingClaim }}{{ .Values.persistentVolume.existingClaim }}{{- else }}{{ template "sftp-server.fullname" . }}-data{{- end }}
-      {{- end }}
-      {{- with .Values.nodeSelector }}
-      nodeSelector:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-    {{- with .Values.affinity }}
-      affinity:
-        {{- toYaml . | nindent 8 }}
-    {{- end }}
-    {{- with .Values.tolerations }}
-      tolerations:
-        {{- toYaml . | nindent 8 }}
-    {{- end }}
+          claimName: {{ template "sftp-server.fullname" . }}-data
