rearranged for Okteto Pipeline

--- a/charts/templates/deployment.yaml
+++ b/charts/templates/deployment.yaml
@@ -19,7 +19,7 @@ spec:
     metadata:
       labels:
         app.kubernetes.io/name: {{ include "sftp-server.name" . }}
-        app.kubernetes.io/instance: {{ .Release.Name }
+        app.kubernetes.io/instance: {{ .Release.Name }}
     spec:
       initContainers:
       containers:
