rearranged for Okteto Pipeline

--- a/charts/templates/deployment.yaml
+++ b/charts/templates/deployment.yaml
@@ -67,6 +67,6 @@ spec:
       #  secret:
       #    secretName: {{ .Values.sftpConfig.hostKeys.secret }}
       #    defaultMode: 384
-      - name: data
-        persistentVolumeClaim:
-          claimName: {{ template "sftp-server.fullname" . }}-data
+      #- name: data
+      #  persistentVolumeClaim:
+      #    claimName: {{ template "sftp-server.fullname" . }}-data
