--- a/charts/templates/data-pvc.yaml
+++ b/charts/templates/data-pvc.yaml
@@ -3,23 +3,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  {{- if .Values.persistentVolume.annotations }}
-  annotations:
-{{ toYaml .Values.persistentVolume.annotations | indent 4 }}
-  {{- end }}
   name: {{ template "sftp-server.fullname" . }}-data
 spec:
   accessModes:
-{{ toYaml .Values.persistentVolume.accessModes | indent 4 }}
-{{- if .Values.persistentVolume.storageClass }}
-{{- if (eq "-" .Values.persistentVolume.storageClass) }}
+    - ReadWriteOnce
   storageClassName: ""
-{{- else }}
-  storageClassName: "{{ .Values.persistentVolume.storageClass }}"
-{{- end }}
-{{- end }}
   resources:
     requests:
-      storage: "{{ .Values.persistentVolume.size }}"
-{{- end -}}
-{{- end -}}
+      storage: "5Mi"
