rearranged for Okteto Pipeline

--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -21,12 +21,12 @@ sftpConfig:
   encrypted: false
   uid: ""
   gid: ""
-  #hostKeys: {}
+  hostKeys: {}
     #secret: name-of-existing-secret
     #keys:
     #- ssh_host_rsa_key
     #- ssh_host_ed25519_key
-  #authorizedKeys: {}
+  authorizedKeys: {}
 
 debug:
   enabled: false
